src/main/java/com/example/demo/__core/errors/except/Ex500.java
package com.example.demo.__core.errors.except;

public class Ex500 extends RuntimeException{
	public Ex500(String msg) {
		super(msg);
	}
}

